# epicode

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUSH_SUMMARY.md  README.md  README.zh.md  RELEASE_STRATEGY.md  ROADMAP.md  SECURITY.md  SUPPORT.md  cliff.toml  epicode-changes.patch  epicode-push.bundle  package-lock.json  package.json
.github/: CHANGELOG_GUIDE.md  CONTRIBUTING.md  FUNDING.yml  GOVERNANCE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  community_skill.md  config.yml  documentation.md  documentation.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  discussions.yml  docker.yml  greetings.yml  labels.yml  release.yml  scorecard.yml  stale.yml
.well-known/mcp/: discovery.json
backend/: .dockerignore  .gitignore  ARCHITECTURE_CONTEXT.md  BENCHMARK.md  Cargo.toml  Dockerfile  Dockerfile.cloud  STABILITY.md  claude.md  deploy_secure.sh  docker-compose.yml  epicode.example.toml  tetramem.example.toml
backend/.cargo/: config.toml
backend/admin/: index.html
backend/deploy/: cargo-config-linux.toml  deploy.sh  e2e_test.sh  e2e_test_input.jsonl  healthcheck.sh  read_memories.jsonl  run-tcp.sh  setup.sh  test_persist.jsonl  test_persist2.jsonl  test_persist3.jsonl  test_persist4.jsonl  test_persist_verify.jsonl  tetramem-tcp.service  tetramem.service  upload_deploy.ps1  verify_context.jsonl  write_all_context.jsonl
backend/docs/: openapi.yaml  pillar-architecture-v15.md  v1.1.0-dev-plan.md
backend/sdk/python/: .gitignore  README.md  pyproject.toml
backend/sdk/python/epicode/: __init__.py  admin.py  client.py  models.py
backend/sdk/python/epicode_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/sdk/python/tetramem/: __init__.py  admin.py  client.py  exceptions.py  models.py
backend/sdk/python/tetramem_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/sdk/typescript/: .gitignore  README.md  package-lock.json  package.json
backend/sdk/typescript/src/: epicode.ts  tetramem.ts
backend/src/: lib.rs  main.rs  util.rs
backend/src/api/: authz.rs  dashboard.html  middleware.rs  mod.rs  routes.rs  server.rs
backend/src/domain/: channel.rs  cylinder.rs  mod.rs  permission.rs  pulse.rs  space.rs  tetra.rs  vertex.rs
backend/src/engine/: adaptive.rs  assembler.rs  audit.rs  auto_pipeline.rs  bus.rs  cache.rs  classifier.rs  cluster.rs  cognitive.rs  cognitive_hooks.rs  constitution.rs  crypto.rs  decision_center.rs  digestion.rs  dream.rs  drive.rs  dynamics.rs  embedding.rs  emotion.rs  energy.rs  gateway.rs  governor.rs  hnsw.rs  index_manager.rs  intake.rs  janitor.rs  key_rotation.rs  knowledge.rs  mcp.rs  mod.rs  outcome.rs  plugin.rs  pulse.rs  reasoning.rs  retrieval.rs  scheduler.rs  search_engine.rs  security.rs  skills.rs  storage.rs  (+4 more)
backend/system_skills/: 01_memory_io.md  02_auto_evolve.md  03_skill_discovery.md  04_knowledge_nav.md  05_context_mgmt.md  06_quality_control.md  07_system_overview.md  08_conversation.md
backend/tests/: crypto.rs  util.rs
deploy/: .env.example  docker-compose.yml  nginx.conf
deploy/helm/epicode/: Chart.yaml  README.md  values.yaml
deploy/helm/epicode/templates/: backend.yaml  frontend.yaml  ingress.yaml  pvc.yaml  redis.yaml  secret.yaml
deploy/kubernetes/: epicode.yaml
docs/: api-reference.md  architecture.md  audit-2026-06-26.md  benchmarks.md  configuration.md  deployment.md  development.md  examples.md  mcp-protocol.md  troubleshooting.md
docs/design/: human-ai-collaborative-kb.md  open-source-sprint1-class.mermaid  open-source-sprint1-design.md  open-source-sprint1-sequence.mermaid
docs/i18n/zh/: README.md
docs/prd/: open-source-maturity-prd.md
examples/curl/: quickstart.sh
examples/node/: basic-memory.mjs
examples/python/: ai_agent_memory.py  basic_memory.py
frontend/: .backend-features.json  Dockerfile  SOURCE_GUIDE.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/api/: router.ts
frontend/api/lib/: http.ts
frontend/db/: schema.ts  seed.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DashboardLayout.tsx  Footer.tsx  LanguageSwitcher.tsx  Layout.tsx  Navbar.tsx  NeuralNetworkBackground.tsx  PageBackground.tsx  SacredBackground.tsx
frontend/src/components/ui/: sidebar.tsx
frontend/src/i18n/: I18nContext.tsx  translations.ts
frontend/src/lib/: api.ts  github.ts
frontend/src/lib/__tests__/: api.test.ts  utils.test.ts
frontend/src/pages/: Benchmarks.tsx  Community.tsx  DashboardGraph.tsx  DashboardMemories.tsx  DashboardOverview.tsx  DashboardSkills.tsx  DashboardSubAccounts.tsx  Docs.tsx  Guide.tsx  Home.tsx  Login.tsx  Register.tsx
frontend/src/providers/: trpc.tsx
guard/: .gitignore  Cargo.toml  epicode-guard.service  install.sh
guard/src/: main.rs
mcp-bridge/: .env.example  README.md  claude_desktop_config.json.example  epicode_mcp_server.py  requirements.txt
scripts/: verify-version.sh
skills/: README.md  react-state-management.md  rust-error-handling.md
tests/: test_epicode_mcp_server.py  test_epicode_memory.py
