[package]
name = "epicode"
version = "1.0.0"  # x-release-please-version
edition = "2021"
description = "Epicode — AI Memory Operating System with MCP and SMRP"
license = "MIT"
authors = ["sunormesky-max"]
repository = "https://github.com/sunormesky-max/epicode"
homepage = "https://epicode.cn"
documentation = "https://epicode.cn/#/docs"
readme = "../README.md"
rust-version = "1.88"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync", "io-util"] }
dashmap = "6"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.7", features = ["cors", "trace", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"
chrono = { version = "0.4", features = ["serde"] }
attohttpc = { version = "0.31", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
futures = "0.3"
tokio-stream = "0.1"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
tokenizers = "0.23"
ndarray = "0.16"
parking_lot = "0.12"
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }
redis = "0.24"
hex = "0.4"
bincode = "1.3"
html2text = "0.17.1"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[[bin]]
name = "epicode-mcp"
path = "src/bin/mcp_server.rs"

[[bin]]
name = "epicode-bench"
path = "src/bin/bench_real.rs"

[[bin]]
name = "epicode-migrate"
path = "src/bin/migrate_embeddings.rs"

[[bin]]
name = "epicode-cloud"
path = "src/bin/cloud.rs"
