[package]
name = "epicode-guard"
version = "2.0.0"  # x-release-please-version
edition = "2021"
license = "MIT"
repository = "https://github.com/sunormesky-max/epicode"
homepage = "https://epicode.cn"
description = "Lightweight host security guard for Epicode deployments"

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
