[package]
name = "epicode-guard"
version = "1.0.1"  # x-release-please-version
edition = "2021"
license = "MIT"
repository = "https://github.com/sunormesky-max/epicode"
homepage = "https://epicode.cn"
description = "Lightweight host security guard for Epicode deployments"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Minimal blocking HTTP client used to forward security telemetry to the
# memory backend without leaking the API key on the process argv (the old
# `curl -H "X-API-Key: <key>" ...` invocation exposed the secret to any local
# user via `ps -ef`/`/proc/<pid>/cmdline`). `ureq` keeps the binary small
# (no async runtime) and lets us construct the request body with serde_json.
ureq = { version = "3", features = ["json"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
