[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epicode-sdk"
version = "1.0.1"
description = "Python SDK for the Epicode API — spatial AI memory system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "sunormesky-max", email = "sunorme@163.com"}
]
keywords = ["epicode", "ai", "memory", "vector", "knowledge-graph", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://epicode.cn"
Documentation = "https://github.com/sunormesky-max/epicode/tree/main/backend/sdk/python"
Repository = "https://github.com/sunormesky-max/epicode"
Issues = "https://github.com/sunormesky-max/epicode/issues"

[tool.setuptools.packages.find]
include = ["epicode*"]
